# rust-vk-slang

./: .gitignore  Cargo.toml  HOWTO.md  README.md  TODO.md  build.rs
src/: main.rs
src/application/: mod.rs  vk_app.rs
src/application/pipelines/: mod.rs  pipeline.rs  pipeline_gradient.rs  pipeline_raytracing.rs  vk_descriptors.rs  vk_pipeline.rs
src/application/scenes/: camera.rs  material.rs  mod.rs  model.rs  scene.rs  triangle.rs
src/application/vulkan/: mod.rs  vk_allocator.rs  vk_buffer.rs  vk_commands.rs  vk_debug.rs  vk_device.rs  vk_entry.rs  vk_frames.rs  vk_gui.rs  vk_image.rs  vk_immediate.rs  vk_init.rs  vk_instance.rs  vk_physical_device.rs  vk_surface.rs  vk_swapchain.rs  vk_sync_structures.rs  vk_window.rs
src/shaders/: gradient.slang  gradient.spv  raytracing.slang
src/shaders/raytracer/: camera.slang  hit.slang  ray.slang  raytracer.slang
src/shaders/scene/: material.slang  model.slang  scene.slang  triangle.slang
