[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
env_logger = "0.11.3"
log = "0.4.22"
vk-mem = "0.4.0"
winit = { version = "0.29", features = ["rwh_06"] }
imgui-rs-vulkan-renderer = { git = "https://github.com/Sorrien/imgui-rs-vulkan-renderer", features = ["vk-mem", "dynamic-rendering"]}
imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = [
    "tables-api",
] }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
glam = "0.28.0"
tobj = "4.0.2"
